--- a/pataMech-node-api/server/package.json
+++ b/pataMech-node-api/server/package.json
@@ -11,10 +11,17 @@
   "author": "Harrison David",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
     "joi": "^17.6.3",
     "knex": "^2.3.0",
+    "passport": "^0.6.0",
     "pg": "^8.8.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
