--- a/pataMech-node-api/server/package.json
+++ b/pataMech-node-api/server/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.6.3",
     "knex": "^2.3.0",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.8.0"
   },
   "devDependencies": {
