--- a/pataMech-ui/package.json
+++ b/pataMech-ui/package.json
@@ -12,15 +12,18 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "axios": "^1.1.3",
     "expo": "~46.0.13",
+    "expo-constants": "~13.2.4",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.7",
     "formik": "^2.2.9",
+    "prop-types": "^15.8.1",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "0.31.1",
     "react-native-paper": "^4.12.5",
-    "react-router-native": "^6.4.3"
+    "react-router-native": "^6.4.3",
+    "expo-location": "~14.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
